# py-random-generator

./: README.md  pyproject.toml
src/randgen/: __init__.py
src/randgen_hrhszsdtc/: __init__.py  example.py
tests/: __init__.py
